--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -93,7 +93,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4397.7099236641216" y="-13.380281690140846"/>
+            <point key="canvasLocation" x="3772" y="-13"/>
         </scene>
         <!--상세 분할 부위-->
         <scene sceneID="91a-dP-fIt">
@@ -219,7 +219,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zzz-T2-ztu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6490.8396946564881" y="2.8169014084507045"/>
+            <point key="canvasLocation" x="4938" y="-13"/>
         </scene>
         <!--오늘의 운동 부위-->
         <scene sceneID="K8u-C5-pYa">
@@ -394,7 +394,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="B8E-jb-jfa">
-                                <rect key="frame" x="20" y="108" width="353" height="177"/>
+                                <rect key="frame" x="20" y="108" width="353" height="502"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8hg-A2-oWW">
                                     <size key="itemSize" width="128" height="128"/>
@@ -410,38 +410,29 @@
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ikc-B9-e9W" customClass="RoundedView" customModule="WorkoutCycle" customModuleProvider="target">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4eu-S1-qeA">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                                    <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="syA-g4-gfV">
-                                                            <rect key="frame" x="43" y="53.666666666666657" width="42" height="21"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                    </subviews>
-                                                    <color key="backgroundColor" systemColor="systemGray6Color"/>
-                                                    <constraints>
-                                                        <constraint firstItem="syA-g4-gfV" firstAttribute="centerX" secondItem="Ikc-B9-e9W" secondAttribute="centerX" id="cli-jV-yf8"/>
-                                                        <constraint firstItem="syA-g4-gfV" firstAttribute="centerY" secondItem="Ikc-B9-e9W" secondAttribute="centerY" id="fka-zL-tvz"/>
-                                                    </constraints>
-                                                    <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                            <real key="value" value="15"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                    </userDefinedRuntimeAttributes>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="syA-g4-gfV">
+                                                    <rect key="frame" x="43" y="53.666666666666657" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Ikc-B9-e9W" firstAttribute="top" secondItem="DUC-VG-LKT" secondAttribute="top" id="CcR-fh-GBb"/>
-                                                <constraint firstAttribute="trailing" secondItem="Ikc-B9-e9W" secondAttribute="trailing" id="GNh-UC-fvq"/>
-                                                <constraint firstItem="Ikc-B9-e9W" firstAttribute="leading" secondItem="DUC-VG-LKT" secondAttribute="leading" id="Hac-Kf-olF"/>
-                                                <constraint firstAttribute="bottom" secondItem="Ikc-B9-e9W" secondAttribute="bottom" id="tnP-Ad-oh2"/>
+                                                <constraint firstAttribute="trailing" secondItem="4eu-S1-qeA" secondAttribute="trailing" id="4x0-U3-5xq"/>
+                                                <constraint firstAttribute="bottom" secondItem="4eu-S1-qeA" secondAttribute="bottom" id="FtS-LW-f2e"/>
+                                                <constraint firstItem="syA-g4-gfV" firstAttribute="centerX" secondItem="DUC-VG-LKT" secondAttribute="centerX" id="Ibq-GY-hd8"/>
+                                                <constraint firstItem="4eu-S1-qeA" firstAttribute="leading" secondItem="DUC-VG-LKT" secondAttribute="leading" id="nNu-yb-C8C"/>
+                                                <constraint firstItem="4eu-S1-qeA" firstAttribute="top" secondItem="DUC-VG-LKT" secondAttribute="top" id="ozm-j9-7b5"/>
+                                                <constraint firstItem="syA-g4-gfV" firstAttribute="centerY" secondItem="DUC-VG-LKT" secondAttribute="centerY" id="pBr-gY-gIF"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
                                             <outlet property="addWorkCycleLabel" destination="syA-g4-gfV" id="axU-Rm-1wc"/>
-                                            <outlet property="addWorkCycleView" destination="Ikc-B9-e9W" id="bP9-4a-2YT"/>
+                                            <outlet property="cellView" destination="4eu-S1-qeA" id="Xje-3r-mgg"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -450,19 +441,13 @@
                                     <outlet property="delegate" destination="Inp-tE-VFe" id="adj-ea-CaM"/>
                                 </connections>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="직접 추가해주세요" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ayx-eH-hpS">
-                                <rect key="frame" x="20" y="305" width="353" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="추가할 운동 분할을 적어주세요" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CrD-lL-bqY">
-                                <rect key="frame" x="20" y="349" width="353" height="34"/>
+                                <rect key="frame" x="20" y="684" width="353" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4zw-aR-1Fg">
-                                <rect key="frame" x="20" y="403" width="353" height="35"/>
+                                <rect key="frame" x="20" y="738" width="353" height="35"/>
                                 <color key="tintColor" red="0.99520033600000002" green="0.74975043539999997" blue="0.1103985384" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Save"/>
@@ -470,6 +455,12 @@
                                     <action selector="saveButton:" destination="Inp-tE-VFe" eventType="touchUpInside" id="Hc5-oL-pMt"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="직접 추가해주세요" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ayx-eH-hpS">
+                                <rect key="frame" x="20" y="640" width="353" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="swP-dK-atK"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -478,14 +469,14 @@
                             <constraint firstItem="CrD-lL-bqY" firstAttribute="top" secondItem="Ayx-eH-hpS" secondAttribute="bottom" constant="20" id="4G5-qm-ZWd"/>
                             <constraint firstItem="CrD-lL-bqY" firstAttribute="leading" secondItem="Ayx-eH-hpS" secondAttribute="leading" id="4eJ-vx-kbU"/>
                             <constraint firstItem="B8E-jb-jfa" firstAttribute="leading" secondItem="EtC-CE-AKd" secondAttribute="leading" id="8fj-Ga-ObY"/>
-                            <constraint firstItem="Ayx-eH-hpS" firstAttribute="top" secondItem="B8E-jb-jfa" secondAttribute="bottom" constant="20" id="B5T-W0-35Y"/>
                             <constraint firstItem="4zw-aR-1Fg" firstAttribute="trailing" secondItem="CrD-lL-bqY" secondAttribute="trailing" id="Cu2-jO-cMl"/>
-                            <constraint firstItem="swP-dK-atK" firstAttribute="bottom" secondItem="4zw-aR-1Fg" secondAttribute="bottom" constant="365" id="DYG-m9-tEL"/>
                             <constraint firstItem="Ayx-eH-hpS" firstAttribute="leading" secondItem="B8E-jb-jfa" secondAttribute="leading" id="GMN-XO-BH0"/>
+                            <constraint firstItem="swP-dK-atK" firstAttribute="bottom" secondItem="4zw-aR-1Fg" secondAttribute="bottom" constant="30" id="Npt-fw-gnT"/>
                             <constraint firstItem="Ayx-eH-hpS" firstAttribute="trailing" secondItem="B8E-jb-jfa" secondAttribute="trailing" id="RNq-fy-rZd"/>
                             <constraint firstItem="4zw-aR-1Fg" firstAttribute="leading" secondItem="CrD-lL-bqY" secondAttribute="leading" id="cwF-mn-ITt"/>
                             <constraint firstItem="EtC-CE-AKd" firstAttribute="leading" secondItem="swP-dK-atK" secondAttribute="leading" constant="20" id="eqV-6N-er8"/>
                             <constraint firstItem="4zw-aR-1Fg" firstAttribute="top" secondItem="CrD-lL-bqY" secondAttribute="bottom" constant="20" id="f7f-DO-tSo"/>
+                            <constraint firstItem="Ayx-eH-hpS" firstAttribute="top" secondItem="B8E-jb-jfa" secondAttribute="bottom" constant="30" id="gHh-Ie-P5r"/>
                             <constraint firstItem="EtC-CE-AKd" firstAttribute="top" secondItem="swP-dK-atK" secondAttribute="top" constant="20" id="kcB-8g-pLg"/>
                             <constraint firstItem="swP-dK-atK" firstAttribute="trailing" secondItem="EtC-CE-AKd" secondAttribute="trailing" constant="20" id="peo-eh-94y"/>
                             <constraint firstItem="CrD-lL-bqY" firstAttribute="trailing" secondItem="Ayx-eH-hpS" secondAttribute="trailing" id="tl4-7J-coO"/>
@@ -500,7 +491,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yYh-x7-Ojd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2824" y="2365"/>
+            <point key="canvasLocation" x="2823.6641221374043" y="2364.7887323943664"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="aZN-pT-2lK">
@@ -718,7 +709,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Zq-I7-zAl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3470.9923664122134" y="-13.380281690140846"/>
+            <point key="canvasLocation" x="2601" y="-13"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="DQ7-3g-bNH">
@@ -740,7 +731,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="7kH-8Y-Fws"/>
+        <segue reference="WfW-8A-Hq3"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="dumbbell" catalog="system" width="128" height="72"/>
