--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -107,8 +107,8 @@
                             </collectionView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="SdL-Ta-cSv">
                                 <rect key="frame" x="0.0" y="721.66666666666663" width="393" height="80.333333333333371"/>
-                                <color key="pageIndicatorTintColor" red="0.99520033600000002" green="0.74975043539999997" blue="0.1103985384" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <color key="currentPageIndicatorTintColor" systemColor="systemPinkColor"/>
+                                <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="currentPageIndicatorTintColor" red="0.99520033600000002" green="0.74975043539999997" blue="0.1103985384" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <action selector="workcyclePageControl:" destination="BYZ-38-t0r" eventType="valueChanged" id="UXn-L7-dE2"/>
                                 </connections>
@@ -496,7 +496,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="B8E-jb-jfa">
-                                <rect key="frame" x="20" y="108.00000000000003" width="353" height="482.66666666666674"/>
+                                <rect key="frame" x="20" y="108" width="353" height="695"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8hg-A2-oWW">
                                     <size key="itemSize" width="128" height="128"/>
@@ -543,58 +543,90 @@
                                     <outlet property="delegate" destination="Inp-tE-VFe" id="adj-ea-CaM"/>
                                 </connections>
                             </collectionView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="YtX-m2-Gpf">
-                                <rect key="frame" x="20" y="640.66666666666663" width="353" height="132.33333333333337"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="직접 추가해 주세요" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ayx-eH-hpS">
-                                        <rect key="frame" x="0.0" y="0.0" width="353" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="추가할 운동 분할을 적어주세요" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CrD-lL-bqY">
-                                        <rect key="frame" x="0.0" y="44" width="353" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4zw-aR-1Fg">
-                                        <rect key="frame" x="0.0" y="98" width="353" height="34.333333333333343"/>
-                                        <color key="tintColor" red="0.99520033600000002" green="0.74975043539999997" blue="0.1103985384" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Save">
-                                            <color key="baseBackgroundColor" red="0.99520033600000002" green="0.74975043539999997" blue="0.1103985384" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        </buttonConfiguration>
-                                        <connections>
-                                            <action selector="saveButton:" destination="Inp-tE-VFe" eventType="touchUpInside" id="Hc5-oL-pMt"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="swP-dK-atK"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="B8E-jb-jfa" firstAttribute="trailing" secondItem="EtC-CE-AKd" secondAttribute="trailing" id="3NU-CJ-C2f"/>
                             <constraint firstItem="B8E-jb-jfa" firstAttribute="leading" secondItem="EtC-CE-AKd" secondAttribute="leading" id="8fj-Ga-ObY"/>
-                            <constraint firstItem="YtX-m2-Gpf" firstAttribute="top" secondItem="B8E-jb-jfa" secondAttribute="bottom" constant="50" id="E9d-nA-MUN"/>
-                            <constraint firstItem="YtX-m2-Gpf" firstAttribute="trailing" secondItem="B8E-jb-jfa" secondAttribute="trailing" id="LrC-rJ-4gu"/>
-                            <constraint firstItem="swP-dK-atK" firstAttribute="bottom" secondItem="YtX-m2-Gpf" secondAttribute="bottom" constant="30" id="eFG-4d-h7a"/>
+                            <constraint firstItem="swP-dK-atK" firstAttribute="bottom" secondItem="B8E-jb-jfa" secondAttribute="bottom" id="QnY-1f-BEp"/>
                             <constraint firstItem="EtC-CE-AKd" firstAttribute="leading" secondItem="swP-dK-atK" secondAttribute="leading" constant="20" id="eqV-6N-er8"/>
                             <constraint firstItem="EtC-CE-AKd" firstAttribute="top" secondItem="swP-dK-atK" secondAttribute="top" constant="20" id="kcB-8g-pLg"/>
                             <constraint firstItem="swP-dK-atK" firstAttribute="trailing" secondItem="EtC-CE-AKd" secondAttribute="trailing" constant="20" id="peo-eh-94y"/>
                             <constraint firstItem="B8E-jb-jfa" firstAttribute="top" secondItem="EtC-CE-AKd" secondAttribute="bottom" constant="20" id="v4X-Ab-qp0"/>
-                            <constraint firstItem="YtX-m2-Gpf" firstAttribute="leading" secondItem="B8E-jb-jfa" secondAttribute="leading" id="xmW-dO-uaz"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="0QA-LU-VNr"/>
+                    <navigationItem key="navigationItem" id="0QA-LU-VNr">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="pencil" catalog="system" id="r8j-Ba-eKg">
+                            <connections>
+                                <segue destination="Dc4-x2-5Kk" kind="presentation" identifier="inputWorkcycle" id="i8d-ZN-QDF"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
-                        <outlet property="addTextField" destination="CrD-lL-bqY" id="kMe-bD-dQu"/>
                         <outlet property="addWorkCycleCollectionView" destination="B8E-jb-jfa" id="09i-cI-qy4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yYh-x7-Ojd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1960" y="3121"/>
+            <point key="canvasLocation" x="1959.5419847328244" y="3120.4225352112676"/>
+        </scene>
+        <!--Input Worl Cycle View Controller-->
+        <scene sceneID="OZ6-ef-ekT">
+            <objects>
+                <viewController id="Dc4-x2-5Kk" customClass="InputWorlCycleViewController" customModule="WorkoutCycle" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VAC-G6-5j7">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="08B-2L-ZMP">
+                                <rect key="frame" x="20" y="20" width="353" height="130"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="직접 추가해 주세요" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tgX-TO-4sN">
+                                        <rect key="frame" x="0.0" y="0.0" width="353" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="추가할 운동 분할을 적어주세요" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tTT-in-muO">
+                                        <rect key="frame" x="0.0" y="44" width="353" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yoa-th-fcS">
+                                        <rect key="frame" x="0.0" y="98" width="353" height="32"/>
+                                        <color key="tintColor" red="0.99520033600000002" green="0.74975043539999997" blue="0.1103985384" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Save">
+                                            <color key="baseBackgroundColor" red="0.99520033600000002" green="0.74975043539999997" blue="0.1103985384" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="saveButton:" destination="Dc4-x2-5Kk" eventType="touchUpInside" id="MOb-N0-BsJ"/>
+                                            <action selector="saveButton:" destination="Inp-tE-VFe" eventType="touchUpInside" id="dgd-8U-4MO"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="TKX-Eo-f06"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="guA-6q-0VD"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="08B-2L-ZMP" firstAttribute="leading" secondItem="guA-6q-0VD" secondAttribute="leading" constant="20" id="Ej4-RQ-c2g"/>
+                            <constraint firstItem="08B-2L-ZMP" firstAttribute="top" secondItem="guA-6q-0VD" secondAttribute="top" constant="20" id="NBT-OD-D3N"/>
+                            <constraint firstItem="guA-6q-0VD" firstAttribute="trailing" secondItem="08B-2L-ZMP" secondAttribute="trailing" constant="20" id="vXJ-1k-OlW"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="fKq-XN-eLo"/>
+                    <connections>
+                        <outlet property="addTextField" destination="tTT-in-muO" id="1xO-ad-adQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RyQ-dn-79h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2891" y="3113"/>
         </scene>
         <!--오운완 달력-->
         <scene sceneID="Sv8-91-unC">
@@ -999,6 +1031,7 @@
         <image name="github" width="256" height="256"/>
         <image name="gmail" width="256" height="256"/>
         <image name="list.bullet.clipboard" catalog="system" width="103" height="128"/>
+        <image name="pencil" catalog="system" width="128" height="113"/>
         <image name="phone.fill" catalog="system" width="128" height="114"/>
         <image name="workout10" width="3000" height="2000"/>
         <image name="workout4" width="924" height="1384"/>
@@ -1011,9 +1044,6 @@
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
